--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
 
     {{BASE_TAG}}
     <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:200,400,600' rel='stylesheet' type='text/css'>
+    
+    <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/exercism.css">
   </head>
   <body>
