Upgrade to 0.0.40 WIP

--- a/tests/index.html
+++ b/tests/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/exercism.css">
     <link rel="stylesheet" href="assets/mocha.css">
+    <link rel="stylesheet" href="assets/test-support.css">
     <style>
       #ember-testing-container {
         position: fixed;
@@ -64,6 +65,7 @@
       window.EmberENV = window.ExercismENV.EmberENV;
     </script>
     <script src="assets/mocha.js"></script>
+    <script src="assets/test-support.js"></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/exercism.js"></script>
     <script src="assets/adapter-qunit.js"></script>
